--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Felted Fluffies"
+      content="Чарівна крамниця іграшок і прикрас, валяних з натуральної вовни овець - Felted Fluffies"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
